SUBDIRS = \
	AdapterEventsTest \
	AddRemoveAdapterTest \
	ApplicationNullTest \
	ButtonTest \
	CheckBoxTest \
	ComboBoxTest \
	ExpandCollapseEventsTest \
	FakeBridgeTest \
	HyperlinkButtonTest \
	ImageTest \
	ListBoxTest \
	MediaElementTest \
	PasswordBoxTest \
	ProgressBarTest \
	RadioButtonTest \
	RangeValueTest \
	ReflectionTest \
	RepeatButtonTest \
	ScrollBarTest \
	SelectionTest \
	SliderTest \
	TableTest \
	TextBlockTest \
	ThumbTest \
	ToggleButtonTest \
	ToggleEventsTest \
	ValueEventsTest \
	ValueTest
