SUBDIRS = \
	AdapterEventsTest \
	AddRemoveAdapterTest \
	ApplicationNullTest \
	ButtonTest \
	CalendarTest \
	CheckBoxTest \
	ComboBoxTest \
	ControlTypeTest \
	DatePickerTest \
	ExpandCollapseEventsTest \
	FakeBridgeTest \
	HyperlinkButtonTest \
	ImageTest \
	ListBoxTest \
	MediaElementTest \
	PasswordBoxTest \
	ProgressBarTest \
	RadioButtonTest \
	RangeValueTest \
	ReflectionTest \
	RepeatButtonTest \
	ScrollBarTest \
	ScrollViewerTest \
	SelectionTest \
	SliderTest \
	TabControlTest \
	TableTest \
	TextBlockTest \
	ThumbTest \
	ToggleButtonTest \
	ToggleEventsTest \
	ValueEventsTest \
	ValueTest
