SUBDIRS = \
	AdapterEventsTest \
	AddRemoveAdapterTest \
	ApplicationNullTest \
	ButtonTest \
	CheckBoxTest \
	ComboBoxTest \
	ControlTypeTest \
	ExpandCollapseEventsTest \
	FakeBridgeTest \
	HyperlinkButtonTest \
	ImageTest \
	ListBoxTest \
	MediaElementTest \
	PasswordBoxTest \
	ProgressBarTest \
	RadioButtonTest \
	RangeValueTest \
	ReflectionTest \
	RepeatButtonTest \
	ScrollBarTest \
	ScrollViewerTest \
	SelectionTest \
	SliderTest \
	TableTest \
	TextBlockTest \
	ThumbTest \
	ToggleButtonTest \
	ToggleEventsTest \
	ValueEventsTest \
	ValueTest

# Tests depending on SWC.dll and SWCD.dll
if MOON_LIBDIR_EXISTS
SUBDIRS += \
	CalendarTest \
	DatePickerTest \
	GridSplitterTest \
	TabControlTest
endif
